--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,3 +1,7 @@
+bibliography: references.bib
+csl: springer-vancouver.csl
+filters:
+  - docx-landscape.lua
 project:
   title: "BCW-focus-groups"
   output-dir: output
