--- a/_variables.yml
+++ b/_variables.yml
@@ -122,6 +122,23 @@ IFs:
   testimonials: Provide testimonials
   updating: Make updating guidelines easier
   value-statement: Describe reporting guidelines where they are encountered
+chapters:
+  bcw: 3
+  discussion: 16
+  focus-groups: 12
+  introduction: 1
+  journal-audit: 9
+  pilot: 15
+  redesign: 14
+  reflexivity and context: 2
+  review: 7
+  synthesis: 6
+  web-audit: 8
+  workshops: 4
+  workshops-ideas: 11
+  workshops-stage-4: 10
+  workshops-stages-1-3: 5
+  workshops-stages-5-6: 13
 counts:
   EQUATOR_ideas: TODO
   EQUATOR_meetings: 7
@@ -158,3 +175,7 @@ stages:
   dissemination: When disseminating resources
   ongoing: On an ongoing basis
   planning: Before developing guidance
+website-github-repo-url: https://github.com/jamesrharwood/equator-guidelines-website
+website-url: https://jamesrharwood.github.io/equator-guidelines-website/
+appendices:
+  ideas_document: #TODO
