--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,6 +3,7 @@ csl: springer-vancouver.csl
 filters:
   - filters/docx-landscape.lua
   - filters/replace_todo.lua
+  # - filters/wordcount.lua
 crossref:
   sec-prefix: Chapter
 project:
