commit ID as author info to docx title block

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -22,10 +22,12 @@ format:
     theme: cerulean
     smooth-scroll: true
     downloads: [docx]
+    highlight-style: github
   docx:
       from: markdown+grid_tables
       reference-doc: reference.docx
       toc: false
+      highlight-style: github
 number-depth: 2
 
 metadata-files:
