new commit version

--- a/metadata/_book.yml
+++ b/metadata/_book.yml
@@ -16,7 +16,7 @@ book:
           file: "chapters/3_synthesis/index.qmd"
         - text: "4. Survey content review*"
           file: "chapters/4_survey_content/index.qmd"
-        - text: "5. EQUATOR website audit"
+        - text: "5. EQUATOR website evaluation"
           file: "chapters/5_website_audit/index.qmd"
         - text: "6. Journal instruction audit*"
           file: chapters/6_journal_audit/index.qmd
